<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <LinearLayout
            android:id="@+id/liveMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/btnMixMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:drawableTop="@drawable/mix_none"
                    android:text="@string/mix_music_n"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/cbLiveMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/mute_n"
                    android:text="@string/mute_n"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/btnShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@null"
                android:drawableTop="@drawable/btn_shot"
                android:gravity="center"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:text="@string/shot"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/btnFace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:drawableTop="@drawable/face_n"
                    android:text="@string/face_n"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/btnOsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:drawableTop="@drawable/osd_n"
                    android:text="@string/osd_n"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/beautify_level_layout" />

</FrameLayout>